--- a/1bec.conf
+++ b/1bec.conf
@@ -47,6 +47,9 @@
    PC WINDOWS
     -
     10.46.72.37
+   felipetavares.com
+    Felipe Tavares
+    103.35.56.141
   SALC
    desconhecido
     Cb Glaydson
