New configurations for testing
Desktop file
Icon
Remote access fully working
Basis for ping testes

--- a/1bec.conf
+++ b/1bec.conf
@@ -47,10 +47,15 @@
    PC WINDOWS
     -
     10.46.72.37
-   felipetavares.com
-    Felipe Tavares
-    103.35.56.141
   SALC
    desconhecido
     Cb Glaydson
     10.46.72.94
+  [TESTE] LOCAL
+   Este Computador
+    -
+    127.0.0.1
+  [TESTE] WEB
+   felipetavares.com
+    Felipe Tavares
+    103.35.56.141
