Added servers and more details on conf file

--- a/1bec.conf
+++ b/1bec.conf
@@ -1,14 +1,61 @@
 1° BEC
  SERVIDORES
   OSIRIS
+   administrador
    10.46.72.1
   HORUS
+   root
    10.46.72.3
   SPED
+   sped
    10.46.72.4
   SISBOL
+   supervisor
    10.46.72.6
+  ZIMBRA
+   zimbra
+   10.46.72.2
  SEÇÕES
+  ROTEADORES & AP
+   AP-DIVADM
+    DIV ADM
+    10.46.72.9
+   AP-ALMOX
+    ALMOX
+    10.46.72.11
+  SIP
+   sip00
+    P/ Impressora
+    10.46.72.60
+   sip01
+    -
+    10.46.72.65
+   sip02
+    Sgt C. Marques
+    10.46.72.63
+   sip03
+    Sd Xavier
+    10.46.72.67
+   sip04
+    Ten Nascimento
+    10.46.72.64
+   sip05
+    Sgt Felipe Souza
+    10.46.72.61
+  SGTE CCAP
+   sgteccap01
+    Sd Réjones
+    10.46.72.126
+   sgteccap02
+    Cb Elias Brito
+    10.46.72.154
+   sgteccap03
+    Sd W.
+    10.46.72.130
+  S4
+   s401
+    Sd Tayrone/Sgt Wilton
+    10.46.73.130
   OP PIPA
    oppipa
     -
