Adding new section works; writes to conf file

--- a/1bec.conf
+++ b/1bec.conf
@@ -17,12 +17,13 @@
    10.46.72.2
  SEÇÕES
   [TESTE] LOCAL
-   Este Computador
-    -
-    127.0.0.1
-    58:fb:84:a4:a4:93
+    Este Computador
+     -
+     127.0.0.1
+     00:00:00:00:00:00
   [TESTE] WEB
-   felipetavares.com
-    Felipe Tavares
-    103.35.56.141
-    00:00:00:00:00:00
+    felipetavares.com
+     Felipe Tavares
+     103.35.56.141
+     00:00:00:00:00:00
+  Nova Secao
